[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/art/candle.png" type="Texture" id=1]
[ext_resource path="res://src/art/candles_with_holder.png" type="Texture" id=2]
[ext_resource path="res://src/objects/heater.gd" type="Script" id=3]
[ext_resource path="res://src/art/holder_and_potion.png" type="Texture" id=4]
[ext_resource path="res://src/art/filleable_potion_BOTTOM.png" type="Texture" id=5]
[ext_resource path="res://src/art/potion_WHITE_VERSION.png" type="Texture" id=6]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.75, 0, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.52
angular_velocity = 114.05
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 200.0
scale_random = 0.38
color_ramp = SubResource( 4 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.645161, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.2442, 0.2442, 0.2442, 0.89809, 0.498039, 0.498039, 0.498039, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.1
angular_velocity = 114.05
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 200.0
scale_random = 0.38
color_ramp = SubResource( 8 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 65.0
height = 14.0

[node name="Heater" type="RigidBody2D"]
collision_mask = 4097
script = ExtResource( 3 )

[node name="Sprites" type="Node2D" parent="."]
scale = Vector2( 1.1, 1.1 )

[node name="Empty" type="Node2D" parent="Sprites"]

[node name="CandlesWithHolder" type="Sprite" parent="Sprites/Empty"]
position = Vector2( -20, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="WithPotion" type="Node2D" parent="Sprites"]
visible = false

[node name="Candle" type="Sprite" parent="Sprites/WithPotion"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="Sprites/WithPotion"]
modulate = Color( 0.627451, 0.556863, 0.556863, 0.364706 )
scale = Vector2( 0.25, 0.25 )
amount = 20
lifetime = 2.0
preprocess = 2.0
explosiveness = 0.13
process_material = SubResource( 2 )

[node name="FilleablePotionBottom" type="Sprite" parent="Sprites/WithPotion"]
position = Vector2( 0, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )

[node name="PotionWhiteVersion" type="Sprite" parent="Sprites/WithPotion"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="HolderAndPotion" type="Sprite" parent="Sprites/WithPotion"]
position = Vector2( -23.6, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="SmokeParticles" type="Particles2D" parent="Sprites/WithPotion"]
modulate = Color( 0.627451, 0.556863, 0.556863, 0.364706 )
scale = Vector2( 0.25, 0.25 )
emitting = false
amount = 5
one_shot = true
explosiveness = 1.0
process_material = SubResource( 7 )

[node name="SmokeParticles2" type="Particles2D" parent="Sprites/WithPotion"]
modulate = Color( 0.627451, 0.556863, 0.556863, 0.364706 )
scale = Vector2( 0.25, 0.25 )
emitting = false
amount = 5
one_shot = true
explosiveness = 1.0
process_material = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
